tweaking sass and css
adding 2 class of navigation bar in top and bottom, beautify its style,
change list-style-type and text-decoration to none.

--- a/blitznews.html
+++ b/blitznews.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 <h1>Blitz News</h1>
-<p align="justify">Fresh news from the oven</p>
+<p align="justify">Fresh news from the oven. Ok that's a little bit oldie and not-quite goldy.</p>
