--- a/contact.html
+++ b/contact.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 <h1>Contact</h1>
-<p align="justify">Have a chat with us. Let the web and drinking do the talking</p>
+<p align="justify">Have a chat with us. Let the web and drinking do the talking. Make it rain and gone the pain. What am I writin'?</p>
