--- a/blitznews.html
+++ b/blitznews.html
@@ -3,4 +3,24 @@ layout: default
 ---
 
 <h1>Blitz News</h1>
-<p align="justify">Fresh news from the oven. Ok that's a little bit oldie and not-quite goldy.</p>
+<p align="justify">Fresh news from the oven. Ok that's a little bit oldie and not quite goldy.</p>
+
+<h1>Featured</h1>
+<ul>
+	{% for posting in site.categories.featured %}
+  <li>
+  	<a href="">{{posting.title}}</a>
+  	<p>{{posting.meta}}</p>
+  </li>
+  {% endfor %}
+</ul>
+
+<h1>Archives</h1>
+<ul>
+	{% for posting in site.categories.archives %}
+  <li>
+  	<a href="">{{posting.title}}</a>
+  	<p>{{posting.meta}}</p>
+  </li>
+  {% endfor %}
+</ul>
